# Playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
android/MyAndroidApp/: .gitignore  settings.gradle
android/MyAndroidApp/app/: build.gradle
android/MyAndroidApp/app/src/androidTest/java/com/example/myandroidapp/: ExampleInstrumentedTest.java
android/MyAndroidApp/app/src/main/: AndroidManifest.xml
android/MyAndroidApp/app/src/main/java/com/example/myandroidapp/: AboutFragment.java  GoogleMapFragment.java  HomeFragment.java  ListFragment.java  MainActivity.java  MapFragment.java  WelcomeFragment.java
android/MyAndroidApp/app/src/main/res/layout/: fragment_about.xml  fragment_googlemap.xml  fragment_home.xml  fragment_list.xml  fragment_welcome.xml
android/MyAndroidApp/app/src/main/res/navigation/: nav_graph.xml
android/MyAndroidApp/app/src/main/res/values/: strings.xml
android/MyAndroidApp/app/src/test/java/com/example/myandroidapp/: ExampleUnitTest.java
android/MyAndroidApp/gradle/wrapper/: gradle-wrapper.properties
android/MyCppProject/: CMakeLists.txt
android/MyCppProject/include/vae/: barrier.h  dijkstra.h  geometry.h  mygraph.h  polygon.h  route_plan_check.h  split.h
android/MyCppProject/src/: barrier.cpp  combine.cpp  geometry.cpp  line.cpp  polygon.cpp  route_plan_check.cpp  segment.cpp  set_attribute.cpp  split.cpp  traverse_order.cpp  tsp.cpp
awesome_lists/: .gitignore  repos.yaml  sync_source.sh
bluetooth/: findmyphone.py  rfcomm_client.c  rfcomm_server.c  simplescan.c
cmake_samples/: CMakeLists.txt
cmake_samples/comments/: CMakeLists.txt
coding_practice/foobar_withgoogle/1_Braille_Translation/: solution.py
coding_practice/foobar_withgoogle/2_Lovely_Lucky_LAMBs/: solution.py
coding_practice/leetcode/: 1198.cc  1265  1265.cc  1360  1428  1485.cc  1490.cc  1506.cc  1570.cc  1602.cc  1650.cc  21  287  325  378  53.cc  544.cc  723  792.cc
cpcos/: .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO  build_local.sh  conanfile.txt  create_docker_image.sh
cpcos/examples/flatbuffers/: monster.fbs
cpcos/examples/time/: time.hpp
cpcos/tests/: boost_log_test.cpp  boost_uuid_test.cpp
cpp/: CMakeLists.txt  actor_main.cc  app_main.cc  container_main.cc  crtp_factory_main.cc  dshbrd_main.cc  exec_main.cc  fsm_main.cc  msg_main.cc  multi_inherit_main.cc  regdata_main.cc  rsa_main.cc  serial_main.cc  spinner_main.cc  thr_main.cc  timer_main.cc  utils_main.cc
cpp/src/: dashboard.h  dispatcher.h  fsm.h  looper.h  messenger.h  msg.h  msgbus.h  regdata.h
cpp/src/datatype/: ids.h  types.h
dart-6ul/: .gitignore
datasets/: .gitignore  download_advio.py
docker/: build_image.sh  delete_previous_container.sh  run_container.sh
docker/x86_64-ubuntu/: Dockerfile  run_container.sh
embedded_dev/: CMakeLists.txt  conan_pr_comm  conanfile.txt  gcc_linaro_arm-linux-gnueabihf
embedded_dev/tests/: boost_test.cpp
gtest_samples/: CMakeLists.txt
gtest_samples/include/gtest_samples/: gtest_samples_demo.h
gtest_samples/src/: gtest_samples_demo.cc
gtest_samples/test/: test.cc
iac_imx6_kit/helloworld/: CMakeLists.txt  hello.c  hello_main.cc
linkit7688/: .gitignore  download_source.sh  linkit7688.config
linkit7688/bsp/: download_source.sh
linkit7688/helloworld/: Makefile  function.c  function.h  helloworld.c  helloworld.cpp
linkit7688/mqtt/: Makefile  main.c
linkit7688/mypackages/examples/helloworld/: Makefile
linkit7688/mypackages/qiao/mqtt_test/: Makefile
linkit7688/qxwz/: app.c  qxwz_sdk.h  qxwz_types.h
mqtt/mosquitto/: Dockerfile  build_image.sh  run_container.sh
opencv_samples/: CMakeLists.txt
opencv_samples/src/: app_zoom_main.cc
python/bt_gatt/: main.py
python/rtcm/: rtcm.py
python/wav_proc/: test.py  wav_proc.py
